--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,12 @@ branches:
   - master
 language: python
 python: 3.5
+before_install:
+- sudo apt-get install -y curl tar
+- bash install-apex.sh
+- eval export AWS_ACCESS_KEY_ID=\$${TRAVIS_BRANCH}_aws_access_key_id
+- eval export AWS_SECRET_ACCESS_KEY=\$${TRAVIS_BRANCH}_aws_secret_access_key
+- eval export AWS_REGION=\$${TRAVIS_BRANCH}_aws_region
 install: pip install awscli
 script:
 - aws s3 sync --exclude '.git/*' --exclude 'README.md' --exclude '.travis.yml' --exclude
