--- a/.travis.yml
+++ b/.travis.yml
@@ -9,8 +9,8 @@ before_install:
 - eval export AWS_REGION=\$${TRAVIS_BRANCH}_aws_region
 install: pip install awscli
 script:
-- npm run build
-- aws s3 sync --exclude '.git/*' --exclude 'README.md' --exclude '.travis.yml' --exclude
-  '.gitignore' --exclude 'upload.sh' --acl public-read --delete build/ s3://www.caxap.design
+- node-sass sass/main.scss css/style.css
+- aws s3 sync --exclude '.git/*' --exclude 'README.md' --exclude '.travis.yml' --exclude --exclude 'Dockerfile' --exclude 'package.json' --exclude 'package-lock.json' 
+  '.gitignore' --exclude 'upload.sh' --acl public-read --delete . s3://www.caxap.design
 - aws configure set preview.cloudfront true
 - aws cloudfront create-invalidation --distribution-id E1NMNJQG1HTNRB --paths '/*'
