--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "license": "ISC",
     "devDependencies": {
         "node-sass": "^4.7.2",
+        "sass-loader": "^6.0.6",
         "webpack": "^3.9.1"
     },
     "dependencies": {
