--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,19 @@
 branches:
   only:
   - master
-language: python
-python: 3.5
+matrix:
+  include:
+    - language: python
+      python: 3.5
+    - language: node_js
+      node_js: 8.7.0
 before_install:
 - eval export AWS_ACCESS_KEY_ID=\$${TRAVIS_BRANCH}_aws_access_key_id
 - eval export AWS_SECRET_ACCESS_KEY=\$${TRAVIS_BRANCH}_aws_secret_access_key
 - eval export AWS_REGION=\$${TRAVIS_BRANCH}_aws_region
-install: pip install awscli
+install: 
+  - pip install awscli
+  - npm install
 script:
 - node-sass sass/main.scss css/style.css
 - aws s3 sync --exclude '.git/*' --exclude 'README.md' --exclude '.travis.yml' --exclude 'Dockerfile' --exclude 'package.json' --exclude 'package-lock.json' 
