--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ before_install:
 - eval export AWS_SECRET_ACCESS_KEY=\$${TRAVIS_BRANCH}_aws_secret_access_key
 - eval export AWS_REGION=\$${TRAVIS_BRANCH}_aws_region
 install: 
-  - pip install awscli
+  - sudo pip install awscli
   - npm install
 script:
 - node-sass sass/main.scss css/style.css
